# BatikKita-Be

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  password_reset_guide.md  vercel.json
.sqlx/: query-216112ab25b326c78015698e0ca75e852322ec51aad933822b0d98461de59410.json  query-21eec51227b93e16ca742d7e2aec9107635cc0af83fbd4141bcbe42acf70c307.json  query-2aed586d6aeb2a09d9e6b782ce586360c9a95928ffaee78fa4b1ff2d6ff39d4a.json  query-3190af54901fd6e28ae7d8f78974e507a59f5dece575dd0fb17325c958f9e3f3.json  query-38425a49b6dbece7e3d63f708b4fe11218bb039d2c8043509976956143612f87.json  query-3e37a0b3a7abe759ce2a862b0a3c3c70787277b8f25bd30f861479500ddf3748.json  query-3fdeef14e97a7b7aef2ed3cc0f4e7c0f226efbfd25767e7e32c16f9f5e87d471.json  query-4b7da8685e1fb4bf757e7c348fa262057ea9cdad167e11304f870df659e34f1e.json  query-503e3d74b296f00aa6c92756bdd7bd56a9aae1ec63ae4dc705a9ff8b827840f2.json  query-570d7f7a6f1458176cbe01bf6c7fe17b5001f985e8809c21ee2b7fabea88893d.json  query-574f9672b0a16cf4f95a8fb1c901e543d4c3560c81ae188d030528f6b2921e03.json  query-59c3d88ef4a4ff91e26bf9e6d3d6f60e3628ff6c661ec7f7727daba8703a03fd.json  query-5f92682ffe1ff82691f473b132f3bae21808b0b00f54661efb23fecc0f0f4c9f.json  query-75e5db7142979d706442a92c8f97333219d1083b8941050e776af02fa409a674.json  query-7e00a8b0de0ee34e34b9e3504e4ecbe2b5163e7b0ca07f19f34274ce8f326aea.json  query-80e337e068d1ff732cf72ed1b519a254071ba16eb7f9f65e7746d8b7e25a06af.json  query-8b8df6e59a5353339cea45cdf8866cb80cde50ab86611a7ca11640726b87e4f3.json  (+9 more)
migrations/: 001_initial.sql  002_seed_data.sql  (+2 more)
(+29 files in other folders)
