[package]
name = "be"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "be"
path = "src/main.rs"

[dependencies]
bcrypt = "0.15"
actix-service = "2"
futures-util = "0.3"
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal"] }
bigdecimal = { version = "0.3", features = ["serde"] }
jsonwebtoken = "9"
actix-cors = "0.7.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
env_logger = "0.10"
